--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <!-- Bootstrap CSS -->
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
 <link rel="stylesheet" href="assets/css/styles.css">
+<link rel="stylesheet" href="assets/css/font.css">
 </head>
 
 <body>
@@ -17,8 +18,68 @@
 
 
 <h1>dig245-a3</h1>
-
-
+<div class="background"></div>
+<h2 class="ramones6p">
+  ramones
+</h2>
+<h3 class="ramones6c">
+  ramones
+</h3>
+<h2 class="ramones5p">
+  ramones
+</h2>
+<h3 class="ramones5c">
+  ramones
+</h3>
+<h2 class="ramones4p">
+  ramones
+</h2>
+<h3 class="ramones4c">
+  ramones
+</h3>
+<h2 class="ramones3p">
+  ramones
+</h2>
+<h3 class="ramones3c">
+  ramones
+</h3>
+<h2 class="ramones2p">
+  ramones
+</h2>
+<h3 class="ramones2c">
+  ramones
+</h3>
+<h2 class="ramones1p">
+  ramones
+</h2>
+<h3 class="ramones1c">
+  ramones
+</h3>
+<h4 class="smalltxt1">
+  saturday
+</h4>
+<h4 class="smalltxt2">
+  january 7 1978
+</h4>
+<h4 class="smalltxt3">
+  with special guests
+</h4>
+<h4 class="smalltxt4">
+  the runaways and suicide
+</h4>
+<h4 class="smalltxt5">
+  live at the palladium
+</h4>
+<h4 class="smalltxt6">
+  126 east 14th st., new york city
+</h4>
+<p>
+<br>The following image is a link to the design I referenced:<br>
+<a href="https://www.swissted.com/products/ramones-at-the-palladium-1978">
+<img alt="Ramones" src="https://cdn.shopify.com/s/files/1/0140/7312/products/ramones_3_1024x1024.jpg?v=1385323211"
+width = "50" height = "100">
+</a>
+</p>
 
 <!-- links to javascripts -->
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
